<resources>
    <string name="app_name">Taskflow</string>
    <string name="title_activity_note_edit">Note View/Edit</string>
    <string name="title_activity_main">Taskflow</string>
    <string name="nav_header_title">Taskflow</string>
    <string name="nav_header_subtitle">Organize your thoughts and ideas</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="created">Created:</string>
    <string name="modified">Last Modified:</string>

    <string name="note_title_label">Title</string>
    <string name="note_content_label">Content</string>
    <string name="note_content_placeholder_label">Details...</string>
    <string name="note_delete_conformation_label">Are you sure you want to delete the note \'%1\'?</string>
    <string name="note_create_title">Create New Note</string>

    <string name="list_title_label">Title</string>
    <string name="list_content_label">Content</string>
    <string name="list_item_add_label">Add</string>
    <string name="list_delete_conformation_label">Are you sure you want to delete the list \'%1\'?</string>
    <string name="list_create_title">Create New List</string>

    <string name="task_name_label">Name</string>
    <string name="task_details_label">Details</string>
    <string name="task_status_label">Status</string>
    <string name="task_delete_conformation_label">Are you sure you want to delete the task \'%1\'?</string>
    <string name="task_create_title">Create New Task</string>

    <string name="project_name_label">Name</string>
    <string name="project_description_label">Description</string>
    <string name="project_select_label">Project</string>
    <string name="project_delete_conformation_label">Are you sure you want to delete the project \'%1\'?</string>
    <string name="project_create_title">Create New Project</string>

    <string name="menu_home">Home</string>
    <string name="menu_notes">Notes</string>
    <string name="menu_checklists">Checklists</string>
    <string name="menu_tasks">Tasks</string>
    <string name="menu_projects">Projects</string>

    <string name="notes_summary_text"><![CDATA[
        <h1>Notes</h1>
        <p>
            <b>Count:</b> %1$d
        </p>
    ]]></string>
    <string name="checklists_summary_text"><![CDATA[
        <h1>Lists</h1>
        <p>
            <b>Count:</b> %1$d
        </p>
    ]]></string>
    <string name="tasks_summary_text"><![CDATA[
        <h1>Tasks</h1>
        <p>
            <b>Count:</b> %1$d<br/>
            <b>Active:</b> %2$d<br/>
            <b>Completed:</b> %3$d<br/>
        </p>
    ]]></string>

    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="saved_confirmation">Saved</string>
    <string name="delete_warning">Would you like to save your changes?</string>
    <string name="deleted_confirmation">Deleted</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_project_selected"><![CDATA[<None>]]></string>
    <string name="no_project_selected_list"><![CDATA[<< None Selected >>]]></string>
    <!--string name="no_project_selected_list">Unassigned</string-->
    <string name="current_viewing">Currently Viewing Project:</string>
    <string name="title_activity_settings">Settings</string>
    <string name="filter_by">Filter By:</string>
    <string name="sort_by">Sort By:</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Task status strings -->
    <string name="TaskStatus_TODO">Triaged</string>
    <string name="TaskStatus_STARTED">Task Started</string>
    <string name="TaskStatus_COMPLETE">Done</string>
    <string name="TaskStatus_PAUSED">On Hold</string>

    <string name="No_Filter">None</string>

    <string name="SortBy_Modified">Modified</string>
    <string name="SortBy_Created">Created</string>
    <string name="SortBy_Name">Name</string>
    <string name="SortBy_Status">Status</string>
</resources>
