<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.pangaea.taskflow.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_notes"
        android:name="com.pangaea.taskflow.ui.notes.NotesFragment"
        android:label="@string/menu_notes"
        tools:layout="@layout/fragment_items" />

    <fragment
        android:id="@+id/nav_checklists"
        android:name="com.pangaea.taskflow.ui.checklists.ChecklistsFragment"
        android:label="@string/menu_checklists"
        tools:layout="@layout/fragment_items" />

    <fragment
        android:id="@+id/nav_tasks"
        android:name="com.pangaea.taskflow.ui.tasks.TasksFragment"
        android:label="@string/menu_tasks"
        tools:layout="@layout/fragment_items" />

    <fragment
        android:id="@+id/nav_projects"
        android:name="com.pangaea.taskflow.ui.projects.ProjectsFragment"
        android:label="@string/menu_projects"
        tools:layout="@layout/fragment_items" />

</navigation>