<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusableInTouchMode="true"
    tools:context="com.pangaea.taskflow.ui.projects.ProjectActivity">

    <com.google.android.material.textfield.TextInputLayout
        app:hintAnimationEnabled="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/project_name_label">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editName"
            android:inputType="textCapSentences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        app:hintAnimationEnabled="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/project_description_label">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editDescription"
            android:inputType="textCapSentences|textMultiLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_project_home"
        android:layout_width="100dp"
        android:layout_height="44dp"
        android:layout_margin="10dp"
        android:text="@string/menu_home"/>

</LinearLayout>
