<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusableInTouchMode="true"
    tools:context="com.pangaea.taskflow.ui.notes.NoteActivity">

    <com.google.android.material.textfield.TextInputLayout
        app:hintAnimationEnabled="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/project_name_label">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTitle"
            android:inputType="textCapSentences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        app:hintAnimationEnabled="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:visibility="gone"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/note_content_label">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editContent"
            android:inputType="textMultiLine"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        app:hintAnimationEnabled="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/note_content_label">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/black">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/action_undo"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@null"
                    android:contentDescription="@null"
                    android:src="@mipmap/undo" />

                <ImageButton
                    android:id="@+id/action_redo"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@null"
                    android:contentDescription="@null"
                    android:src="@mipmap/redo" />

                <ImageButton
                    android:id="@+id/action_bold"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@null"
                    android:contentDescription="@null"
                    android:src="@mipmap/bold" />

                <ImageButton
                    android:id="@+id/action_italic"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@null"
                    android:contentDescription="@null"
                    android:src="@mipmap/italic" />

                <ImageButton
                    android:id="@+id/action_strikethrough"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@null"
                    android:contentDescription="@null"
                    android:src="@mipmap/strikethrough" />

                <ImageButton
                    android:id="@+id/action_underline"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@null"
                    android:contentDescription="@null"
                    android:src="@mipmap/underline" />

                <ImageButton
                    android:id="@+id/action_heading1"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@null"
                    android:contentDescription="@null"
                    android:src="@mipmap/h1" />

                <ImageButton
                    android:id="@+id/action_heading2"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@null"
                    android:contentDescription="@null"
                    android:src="@mipmap/h2" />

                <ImageButton
                    android:id="@+id/action_heading3"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@null"
                    android:contentDescription="@null"
                    android:src="@mipmap/h3" />

                <ImageButton
                    android:id="@+id/action_indent"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@null"
                    android:contentDescription="@null"
                    android:src="@mipmap/indent" />

                <ImageButton
                    android:id="@+id/action_outdent"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@null"
                    android:contentDescription="@null"
                    android:src="@mipmap/outdent" />

                <ImageButton
                    android:id="@+id/action_align_left"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@null"
                    android:contentDescription="@null"
                    android:src="@mipmap/justify_left" />

                <ImageButton
                    android:id="@+id/action_align_center"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@null"
                    android:contentDescription="@null"
                    android:src="@mipmap/justify_center" />

                <ImageButton
                    android:id="@+id/action_align_right"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@null"
                    android:contentDescription="@null"
                    android:src="@mipmap/justify_right" />

                <ImageButton
                    android:id="@+id/action_insert_bullets"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@null"
                    android:contentDescription="@null"
                    android:src="@mipmap/bullets" />

                <ImageButton
                    android:id="@+id/action_insert_numbers"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@null"
                    android:contentDescription="@null"
                    android:src="@mipmap/numbers" />

            </LinearLayout>
        </HorizontalScrollView>
        <jp.wasabeef.richeditor.RichEditor
            android:id="@+id/editContent2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        app:hintAnimationEnabled="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:hint="@string/project_select_label">
        <AutoCompleteTextView
            android:id="@+id/project_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"/>
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>
